crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Cannot_have_only_one…_(8b0258f5188209c6).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Cannot have only one constraint
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", int)
```

# Diagnostics

```
error[invalid-legacy-type-variable]: A `TypeVar` cannot have exactly one constraint
 --> src/mdtest_snippet.py:4:18
  |
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", int)
  |                  ^^^
  |
info: rule `invalid-legacy-type-variable` is enabled by default

```
